# UgcSlideShowAIAgent

./: .gitignore  CLAUDE.md  README.md  install.sh  make-slideshow.command  package-lock.json  package.json  pyproject.toml  slideshow-agent.mjs  slideshow.py
architecture/: generate-slideshow.md  nanobanana-api.md
execution/: generate-images.mjs  open-studio.mjs  probe-nanobanana.mjs  run.mjs  validate-script.mjs
execution/lib/: kie.mjs
memory/: decisions.md  findings.md  progress.md  task_plan.md
slideshow/: package-lock.json  package.json  tsconfig.json
slideshow/src/: Root.tsx  Slideshow.tsx  active-script.json  types.ts
src/slideshowagent/: __init__.py  __main__.py  _core.py
